l10:lij browser.property new translation part4

--- a/lij/browser/chrome/browser/browser.properties
+++ b/lij/browser/chrome/browser/browser.properties
@@ -335,11 +335,11 @@ dataReportingNotification.message = Çerte informaçioin se mandan aotomaticamen
 dataReportingNotification.button.label = Çerni cöse condividde
 dataReportingNotification.button.accessKey = s
 
-sowStartup.message = O %S o pâ lento inta faze de inandiamento
-sowStartup.helpButton.label = Screvi comme fao corî
-sowStartup.helpButton.accesskey = S
-sowStartup.disableNotificationButton.label = No dimeo ciù
-sowStartup.disableNotificationButton.accesskey = N
+slowStartup.message = O %S o pâ lento inta faze de inandiamento
+slowStartup.helpButton.label = Screvi comme fao corî
+slowStartup.helpButton.accesskey = S
+slowStartup.disableNotificationButton.label = No dimeo ciù
+slowStartup.disableNotificationButton.accesskey = N
 
 social.aria.toolbarButtonBadgeText = %1$S (%2$S)
 
@@ -428,11 +428,11 @@ menuRestoreAllTabsSubview.label = Repiggia feuggi seræ
 menuRestoreAllWindowsSubview.label = Repiggia barcoin seræ
 newWindowButton.tooltip = Arvi 'n neuvo barcon (%S)
 printButton.tooltip = Stanpa sta pagina… (%S)
-starButtonOverfowed.label = Azonzi volegmaento inti segnalibbri
-starButtonOverfowedStarred.label = Cangia segnalibbro
+starButtonOverflowed.label = Azonzi volegmaento inti segnalibbri
+starButtonOverflowedStarred.label = Cangia segnalibbro
 tabviewButton.tooltip = Amuggia i feuggi (%S)
-update.downoadAndInstallButton.label = Agiorna a %S
-update.downoadAndInstallButton.accesskey = A
+update.downloadAndInstallButton.label = Agiorna a %S
+update.downloadAndInstallButton.accesskey = A
 addonConfirmInstall.message = Sto scito o voeiva instalâ 'n conponente azonto in #1;Sto scito o voeiva instalâ #2 conponenti azonti in #1
 addonConfirmInstallUnsigned.message = Atençion: sto scito o voeiva instalâ un conponente azonto no verificæ in #1. Procede con caotela.;Atençion: sto scito voeiva instalâ #2 componenti azonti no verificæ in #1. Procede con caotela.
 addonConfirmInstallSomeUnsigned.message = ;Atençion: sto scito o voeiva instalâ #2 componenti azonti in #1, quarchedun di quæ o no l'é verificou. Procede con caotela.
@@ -461,7 +461,7 @@ badContentBlocked.blocked.message = Quarche contegnuo in sta pagina o l'é stæt
 badContentBlocked.notblocked.message = Nisciun contegnuo in sta pagina o l'é oua bocou da %S.
 ctrlTab.listAllTabs.label = ;Elenca tutti i #1 feuggi
 deveditionTheme.name = Ediçion pe-i Sviopatoî
-downoads.tooltip = Mostra l’avansamento di descaregamenti in corso (%S)
+downloads.tooltip = Mostra l’avansamento di descaregamenti in corso (%S)
 e10s.offerPopup.mainMessage = %S fito o saiâ a moltiprocesso. L'é poscibile iniçiâ a deuviâ sta modalitæ ancheu e avei acesso in anteprimma a megioramenti comme:
 e10s.offerPopup.highlight1 = Magiô reativitæ
 e10s.offerPopup.highlight2 = Meno fermæ anòmale
