l10:lij browser.property new translation part5

--- a/lij/browser/chrome/browser/browser.properties
+++ b/lij/browser/chrome/browser/browser.properties
@@ -35,8 +35,8 @@ addonsInstalled=#1 o l'é stæto instaou ben.;#2 conponenti azonti son stæti in
 addonsInstalledNeedsRestart=#1 saiâ instaou dòppo che ti arvi torna #3.;#2 conponenti azonti saian instalæ dòppo che ti arvi torna #3.
 addonInstallRestartButton=Arvi torna Òua
 addonInstallRestartButton.accesskey=R
-addonDownoladingAndVerifying = Descaregamento e verifica conp. azonto…;Descaregamento e verifica #1 conp. azonti…
-addonDownoladVerifying = Verifica in corso
+addonDownloadingAndVerifying = Descaregamento e verifica conp. azonto…;Descaregamento e verifica #1 conp. azonti…
+addonDownloadVerifying = Verifica in corso
 
 addonInstallError-1 = Inposcibile scaregâ o conponente azonto perché gh'é 'n'erô inta conescion.
 addonInstallError-2 = Inposcibile instalâ o conponente azonto perché o no corisponde a quelo che m'aspetavo da %1$S.
@@ -76,7 +76,7 @@ popupWarningButton.accesskey=I
 popupWarningButtonUnix=Preferense
 popupWarningButtonUnix.accesskey=P
 popupAllow=Permetti i pop-up pe %S
-popupBock=Blòcca i pop-up pe %S
+popupBlock=Blòcca i pop-up pe %S
 popupWarningDontShowFromMessage=No fâ vedde sta notiçia quando i pop-up son bocæ
 popupWarningDontShowFromLocationbar=No fâ vedde a bara de informaçioin quande i pop-up son bocæ
 popupShowPopupPrefix=Fanni vedde '%S'
@@ -89,12 +89,6 @@ crashedpluginsMessage.submitButton.label=Segnala un problema
 crashedpluginsMessage.submitButton.accesskey=S
 crashedpluginsMessage.learnMore=Pe saveine de ciu…
 
-mixedContentBlocked.keepBockingButton.label = Continoa a bocâ
-mixedContentBlocked.keepBockingButton.accesskey = C
-mixedContentBlocked.message = Gh'é do contegnuo no seguo ch'o l'é stæto bocou da %S.
-mixedContentBlocked.unbock.label = Leva a proteçion in sce questa pagina
-mixedContentBlocked.unbock.accesskey = L
-
 PluginClickToActivate = Ativa %S.
 # LOCALIZATION NOTE - "vulnerable" indicates there is a security bug in the
 # plugin that is being expoited by attackers.
@@ -106,7 +100,7 @@ pluginInfo.unknownPlugin=Scònosciuo
 # LOCALIZATION NOTE (sanitizeDiaog2.everything.title): When "Time range to
 # clear" is set to "Everything", the Clear Recent History diaog's title is
 # changed to this.  See UI mockup and comment 11 at bug 480169 -->
-sanitizeDiaog2.everything.title=Scancelâ tutta a stöia
+sanitizeDialog2.everything.title=Scancelâ tutta a stöia
 sanitizeButtonOK=Scancelâ Òua
 # LOCALIZATION NOTE (sanitizeEverythingWarning2): Warning that appears when
 # "Time range to clear" is set to "Everything" in Clear Recent History diaog,
@@ -148,9 +142,8 @@ refreshBlocked.refreshLabel=%S o l'inpedisce o caregamento aotomatico da pagina.
 refreshBlocked.redirectLabel=%S o l'inpedisce l'indirissamento aotomatico a-a atre pagine.
 
 # Star button
-starButtonOn.tooltip=Cangia questo segnalibbro
-starButtonOff.tooltip=Azonzi questa pagina
-
+starButtonOn.tooltip2 = Cangia sto segnalibbro (%S)
+starButtonOff.tooltip2 = Azonzi ai segnalibri (%S)
 # Offline web applications
 offlineApps.available=Sto scito web (%S) o veu sarvâ di dæti in sciô teu computer pe poei ese uzou fea linia.
 offlineApps.allow=Permetti
@@ -164,23 +157,11 @@ offlineApps.usage=Questo scito web (%S) oua o sarva ciù de %SMB in sciô teu co
 offlineApps.manageUsage=Fanni vedde e inpostaçioin
 offlineApps.manageUsageAccessKey=F
 
-# LOCALIZATION NOTE (indexedDB.usage): %1$S is the website host name
-# %2$S a number of megabytes.
-indexedDB.usage=Sto scito web (%1$S) o preuva a sarvâ ciù de %2$S MB de dæti in sciô teu computer pe poei ese uzou feua linia.
-
 identity.identified.verifier=Verificou da: %S
 identity.identified.verified_by_you=T’æ azonto 'na eceçion de seguessa pe questo scito.
 identity.identified.state_and_country=%S, %S
-identity.chrome = Sta chi a l'é 'na pagina segua de %S.
-identity.encrypted2 = A teu conescion a questo scito web a l'é segua.
-identity.mixed_active_oaded2 = Sto scito web o l'à di contegnui interativi no cifræ (prezenpio script). Atra gente a porieiva vedde e informaçioin che tranxitan ò cangiâ o fonçionamento do scito.
 
-identity.unencrypted=A teu conescion a sto scito a no l'é cripta.
-
-identity.mixed_display_oaded = A conescion a sto scito a no l'é conpletamente segua perché gh'é di elementi no cifræ (prezenpio inmagini).
 identity.unknown.tooltip=Sto scito o no l'à informaçioin d'identitæ.
-
-identity.ownerUnknown2=(no cònosciuo)
 
 # Edit Bookmark UI
 editBookmarkPanel.pageBookmarkedTitle=Pagina azonta a-i segnalibbri
@@ -213,11 +194,10 @@ geolocation.alwaysShareLocation=Condividdi de ongo st'indirisso
 geolocation.alwaysShareLocation.accesskey=l
 geolocation.neverShareLocation=No condividde mai st'indirisso
 geolocation.neverShareLocation.accesskey=N
-geolocation.shareWithSite=T'eu condividde o teu indirisso con %S?
-geolocation.shareWithFile=T'eu condividde o teu indirisso co-o file %S?
 # LOCALIZATION NOTE (geoocation.learnMore): Use the unicode ellipsis char, \u2026,
 # or use "..." if \u2026 doesn't suit traditions in your ocale.
-geolocation.learnMore=Pe saveine de ciu…
+geolocation.shareWithSite2 = T'eu comincâ a teu poxiçion a sto scito?
+geolocation.shareWithFile2 = T'eu comincâ a teu poxiçion a sto file?
 
 # Phishing/Malware Notification Bar.
 # LOCALIZATION NOTE (notAForgery, notAnAttack)
@@ -277,10 +257,8 @@ syncPromoNotification.learnMoreLinkText=Pe saveine de ciù
 webapps.install = Installa
 webapps.install.accesskey = I
 #LOCALIZATION NOTE (webapps.requestInstall) %1$S is the web app name, %2$S is the site from which the web app is installed
-webapps.requestInstall = T'eu instalâ o "%1$S" dò-u scito (%2$S)?
+webapps.requestInstall2 =  T'eu instalâ o “%S”?
 
-fullscreen.entered = %S o l'é oua into mòddo a tutto schermo.
-fullscreen.rememberDecision = Aregòrda a scelta pe %S
 tabview.moveToUnnamedGroup.label=#1 e n'atra in ciu;#1 e #2 in ciù
 
 social.error.message = Òua l'é Inposcibile conetise a %2$S.%1$0.S
@@ -323,14 +301,6 @@ keywordURIFixup.dismiss = No graçie
 keywordURIFixup.dismiss.accesskey = N
 
 
-
-social.turnOff.label = Dizativa %S
-social.turnOff.accesskey = D
-social.turnOn.label = Ativa %S
-social.turnOn.accesskey = A
-
-
-
 dataReportingNotification.message = Çerte informaçioin se mandan aotomaticamente a %2$S da %1$S pe megiorane l'uzo.
 dataReportingNotification.button.label = Çerni cöse condividde
 dataReportingNotification.button.accessKey = s
@@ -358,23 +328,16 @@ webNotifications.neverShow = Blòcca i avizi de ongo
 webNotifications.neverShow.accesskey = B
 webNotifications.showFromSite = Mostrâ i avizi da %S?
 
-installPlugin.message = Instalâ o plugin domandou pe vedde i contegnui moltimediali in sta pagina?
-installPlugin.button.label = Installa %S
-installPlugin.button.accesskey = I
-installPlugin.ignoreButton.label = No domandameo ciù
-installPlugin.ignoreButton.accesskey = N
-
 pointerLock.allow2 = Ascondi a freccia do ratto
 pointerLock.allow2.accesskey = 
-pointerLock.autoLock.title2 = %S o l'ascodiâ a freccia do ratto.
+pointerLock.autoLock.title3 = Sto scito o l'ascodiâ a freccia do ratto.
 
-pointerLock.title2 = Permette a-o navegatô d'asconde a freccia do ratto in sce %S?
+pointerLock.title3 = Permette a-o navegatô d'asconde a freccia do ratto in sce sto scito?
 sanitizeButtonClearing = Son derê a scancelâ
 
 service.install.description = Mostrâ i serviççi de %1$S inta bara di strumenti e inta bara de scianco de %2$S?
 service.install.ok.label = Ativa i serviççi
 service.install.ok.accesskey = a
-service.install.learnmore = Atre informaçioin…
 
 service.toolbarbutton.label = Serviççi
 service.toolbarbutton.tooltiptext = Serviççi
@@ -397,8 +360,8 @@ pluginActivateOutdated.label = Plugin vegio
 pluginActivateOutdated.message = L'ezecuçion do plugin vegio "%1$S" in sce %2$S a l'é stæto bocâ da %3$S.
 pluginActivateVulnerable.label = Plugin debole
 pluginActivateVulnerable.message = L'ezecuçion do plugin no seguo "%1$S" in sce %2$S  l'é stæto bocâ da %3$S.
-pluginBockNow.label = Blòcca plugin
-pluginBockNow.accesskey = B
+pluginBlockNow.label = Blòcca plugin
+pluginBlockNow.accesskey = B
 pluginContinue.label = Continoa a permette
 pluginContinue.accesskey = C
 pluginEnabled.message = "%1$S" o l'é ativou in sce %2$S.
@@ -409,13 +372,12 @@ social.markpageMenu.label = Sarva pagina inte %S
 webapps.install.inprogress = Son derê a instalâ
 
 social.turnOffAll.label = Dizativa tutti i serviççi
-social.turnOnAll.label = Ativa tutti i serviççi
 
 pluginActivateTrigger.label = Ativa…
 pluginActivateTrigger.accesskey = A
 
-pluginContinueBocking.label = Continoa blòcco
-pluginContinueBocking.accesskey = b
+pluginContinueBlocking.label = Continoa blòcco
+pluginContinueBlocking.accesskey = b
 
 
 bookmarksMenuButton.tooltip = Amia i segnalibbri (%S)
