[dsb] update from Pootle (thunderbird)

--- a/dsb/editor/ui/chrome/composer/editor.properties
+++ b/dsb/editor/ui/chrome/composer/editor.properties
@@ -89,6 +89,7 @@ LinkImage=Wótkazowy wobraz
 MixedSelection=[Měšany wuběrk]
 Mixed=(měšany)
 # LOCALIZATION NOTE (NotInstalled): %S is the name of the font
+NotInstalled=%S (njeinstalěrowany)
 EnterLinkText=Zapódajśo tekst, kótaryž ma se za wótkaz zwobraznił:
 EnterLinkTextAccessKey=Z
 EmptyLinkTextError=Zapódajśo pšosym tekst za toś ten wótkaz.
