l10:lij new translation

--- a/lij/browser/chrome/browser/browser.properties
+++ b/lij/browser/chrome/browser/browser.properties
@@ -16,7 +16,7 @@ contextMenuSearch.accesskey = r
 
 bookmarkAllTabsDefault=[Nomme da cartella]
 
-xpinstallPromptWarning=%S o l'inpedisce a questo scito (%S) de instalâ software in sciô teu computer.
+xpinstallPromptMessage = %S o l'à inpedio a sto scito de domandâ l’instalaçion de software in sciô teu computer.
 xpinstallPromptAllowButton=Permetti
 # Accessibility Note:
 # Be sure you do not choose an accesskey that is used elsewhere in the active context (e.g. main menu bar, submenu of the warning popup button)
@@ -212,11 +212,6 @@ safebrowsing.reportedAttackSite=O l'é stæto segnaou comme scito de atacco!
 safebrowsing.notAnAttackButton.label=Sto chi o no l'é 'n scito de atacco…
 safebrowsing.notAnAttackButton.accessKey=a
 
-# Ctrl-Tab
-# LOCALIZATION NOTE (ctrlTab.showAll.label): #1 represents the number
-# of tabs in the current browser window. It will always be 2 at least.
-# See: http://deveoper.mozilla.org/en/docs/Localization_and_Plurals
-ctrlTab.showAll.label=;Fanni vedde tutti i #1 feuggi
 
 # LOCALIZATION NOTE (addKeywordTitleAutoFill): %S will be replaced by the page's title
 # Used as the bookmark name when saving a keyword for a search field.
@@ -326,7 +321,7 @@ webNotifications.alwaysShow = Mostra i avizi de ongo
 webNotifications.alwaysShow.accesskey = v
 webNotifications.neverShow = Blòcca i avizi de ongo
 webNotifications.neverShow.accesskey = B
-webNotifications.showFromSite = Mostrâ i avizi da %S?
+webNotifications.showFromSite2 = Mostrâ i avizi da sto scito?
 
 pointerLock.allow2 = Ascondi a freccia do ratto
 pointerLock.allow2.accesskey = 
@@ -370,8 +365,6 @@ pluginEnabledVulnerable.message = O plugin o no l'é seguo "%1$S" o l'é ativou 
 social.marklinkMenu.label = Sarva colegamento inte %S
 social.markpageMenu.label = Sarva pagina inte %S
 webapps.install.inprogress = Son derê a instalâ
-
-social.turnOffAll.label = Dizativa tutti i serviççi
 
 pluginActivateTrigger.label = Ativa…
 pluginActivateTrigger.accesskey = A
@@ -545,5 +538,42 @@ push.alwaysAllow.accesskey = C
 push.alwaysBlock = Blòcca de longo
 push.alwaysBlock.accesskey = B
 push.enablePush2 = Consenti a sto scito l'uzo de notifiche push?
+
+flashHang.message = An cangiou quarche inpostaçion de Adobe Flash pe megiorane e prestaçion.%0.S
+flashHang.helpButton.label = Atre informaçioin…
+flashHang.helpButton.accesskey = A
+
+muteTab.label = Dizativa aodio in sto feuggio
+muteTab.accesskey = v
+unmuteTab.label = Ativa aodio in sto feuggio
+unmuteTab.accesskey = v
+
+newTabButton.tooltip = Arvi 'n neuvo fueggio (%S)
+
+processHang.message = O %1$S o l'é ralentou da 'na pagina web. Cöse ti veu fâ?
+processHang.button.label = Opçioin
+processHang.button.accessKey = O
+
+readingList.promo.firstUse.readerView.title = Mòddo letua
+readingList.promo.firstUse.readerView.body = Scancella tutto quello ch'o no serve o concentrati into testo che t'eu leze.
+
+safebrowsing.reportedUnwantedSite = O scito ch'o gh'aiva do software no desiderou o l'é stæto segnalou
+
+trackingProtection.intro.title = Comme fonçionn-a a proteçion anti-traciamento
+trackingProtection.intro.description = Quande o scuo o l'é vixibile Firefox o l'é derê a blocâ in mòddo ativo i contegnui che peuan traciâ i vixitatoî.
+trackingProtection.intro.step1of3 = 1 di 3
+trackingProtection.intro.nextButton.label = Pròscimo
+trackingProtection.icon.activeTooltip = Blocæ tentativi de traciamento
+trackingProtection.icon.disabledTooltip = Atrovæ tentativi de traciamento
+
+unsignedAddonsDisabled.message = Quarche conponente azonto instaloi o l'é stæto dizativou perché no ò pòsciuo verificali.
+unsignedAddonsDisabled.learnMore.label = Atre informaçioin
+unsignedAddonsDisabled.learnMore.accesskey = A
+webapps.doNotUninstall = No dizinstalâ
+webapps.doNotUninstall.accesskey = N
+webapps.requestUninstall = Dizinstallare “%1$S”?
+webapps.uninstall = Dizinstalla
+webapps.uninstall.accesskey = D
+xpinstallPromptMessage = %S o l'à inpedio a sto scito de domandâ l’instalaçion de software in sciô teu computer.
 
 
