--- a/lij/browser/chrome/browser/devtools/inspector.properties
+++ b/lij/browser/chrome/browser/devtools/inspector.properties
@@ -20,14 +20,14 @@ confirmNavigationAway.buttonLeaveAccesskey=L
 confirmNavigationAway.buttonStay=Stanni in sciâ pagina
 confirmNavigationAway.buttonStayAccesskey=S
 
-breadcrumbs.siblings=Siblings
+breadcrumbs.siblings=Vexin
 # LOCALIZATION NOTE (htmlPanel): Used in the Inspector tool's openInspectorUI
 # method when registering the HTML panel.
 
 # LOCALIZATION NOTE (nodeMenu.tooltiptext)
 # This menu appears in the Infobar (on top of the highlighted node) once
 # the node is selected.
-nodeMenu.tooltiptext=Operaçioin do groppo
+nodeMenu.tooltiptext=Operaçioin in sciô groppo
 
 inspector.label = Analixi pagina
 inspector.tooltip = Analixi DOM e stili
@@ -39,4 +39,19 @@ markupView.more.showAll = Fanni vedde tutti i %S groppi
 debuggerPausedWarning.message = O debugger o l'é 'n pösa. Quarche fonçion comme a seleçion co-o ratto a no gh'e.
 
 previewTooltip.image.brokenImage = Inposcibile caregâ l'inmagine
+
+inspector.panelLabel.markupView = Amia o còdice
+inspector.panelLabel = Panello Analixi pagina
+inspector.tooltip2 = Analixi DOM e stili(%S)
+eventsTooltip.openInDebugger = Arvi into Debugger
+docsTooltip.visitMDN = Vixita a pagina MDN
+docsTooltip.loadDocsError = Inposcibile caregâ a pagina con-a documentaçion.
+inspector.collapsePane = Conprimi panello
+inspector.expandPane = Espandi panello
+inspector.searchResultsCount2 = %1$S de %2$S
+inspector.searchResultsNone = Nesciunn-a corispondensa
+inspector.menu.openUrlInNewTab.label = Arvi colegamento inte neuvo feuggio
+inspector.menu.copyUrlToClipboard.label = Còpia indirisso colegamento
+inspector.menu.selectElement.label = Seleçionn-a elemento #%S
+
 
