l10:lij new translation part2

--- a/lij/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/lij/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -7,26 +7,24 @@ history-panelmenu.tooltiptext2 = Veddi a stöia (%S)
 privatebrowsing-button.label = Barcon anònimo\u00AD
 privatebrowsing-button.tooltiptext = Arvi 'n neuvo barcon anònimo (%S)
 save-page-button.label = Sarva pagina
-save-page-button.tooltiptext2 = Sarva sta pagina… (%S)
+save-page-button.tooltiptext3 = Sarva sta pagina (%S)
 find-button.label = Treuva
-find-button.tooltiptext2 = Treuva drento sta pagina… (%S)
+find-button.tooltiptext3 = Treuva inta pagina (%S)
 open-file-button.label = Arvi file
-open-file-button.tooltiptext2 = Arvi file… (%S)
+open-file-button.tooltiptext3 = Arvi file (%S)
 developer-button.label = Sviluppo
-developer-button.tooltiptext = Strumenti pe-o sviluppo web (%S)
+developer-button.tooltiptext2 = Arvi i strumenti pe-o sviluppo (%S)
 sidebar-button.label = Bare de scianco
-sidebar-button.tooltiptext = Veddi e bare de scianco
+sidebar-button.tooltiptext2 = Veddi e bare de scianco
 add-ons-button.label = Conponenti azonti
-add-ons-button.tooltiptext2 = Arvi o gestô di conponenti azonti (%S)
-switch-to-metro-button2.label = Windows 8 Touch
-switch-to-metro-button2.tooltiptext = Arvi torna con %S in mòddo Windows 8 Touch
+add-ons-button.tooltiptext3 = Gestisci i conponenti azonti (%S)
 preferences-button.label = Preferense
 preferences-button.tooltiptext2 = Arvi e preferense
 preferences-button.tooltiptext.withshortcut = Arvi e preferense (%S)
 preferences-button.labelWin = Opçioin
 preferences-button.tooltipWin2 = Arvi opçioin
 zoom-controls.label = Contròlli zoom
-zoom-controls.tooltiptext = Contralli pe-a gestion do zoom
+zoom-controls.tooltiptext2 = Contròlli pe-a gestion do zoom
 zoom-out-button.label = Riduci zoom
 zoom-out-button.tooltiptext2 = Riduci zoom (%S)
 zoom-reset-button.label = %S%%
@@ -34,7 +32,7 @@ zoom-reset-button.tooltiptext2 = Repiggia o livello de zoom (%S)
 zoom-in-button.label = Aomenta zoom
 zoom-in-button.tooltiptext2 = Aomenta zoom (%S)
 edit-controls.label = Contròlli de cangiamento
-edit-controls.tooltiptext = Contròlli pe-o cangiamento do testo
+edit-controls.tooltiptext2 = Contròlli pe-o cangiamento do testo
 cut-button.label = Taggia
 cut-button.tooltiptext2 = Taggia (%S)
 copy-button.label = Còpia
@@ -42,10 +40,29 @@ copy-button.tooltiptext2 = Còpia (%S)
 paste-button.label = Incòlla
 paste-button.tooltiptext2 = Incòlla (%S)
 feed-button.label = Abon-ite
-feed-button.tooltiptext = Abon-ite a sta pagina…
-characterencoding-button.label = Codifica carateri\u00AD
-characterencoding-button.tooltiptext2 = Veddi opçioin pe-a codifica carateri
+feed-button.tooltiptext2 = Abon-ite a sta pagina
+characterencoding-button2.label = Codifica testo\u00AD
+characterencoding-button2.tooltiptext = VVeddi opçioin pe-a codifica do testo
 email-link-button.label = Manda colegamento
-email-link-button.tooltiptext2 = Manda colegamento pe email…
+email-link-button.tooltiptext3 = Manda colegamento a sta pagina pe email
 quit-button.tooltiptext.linux2 = Sciòrti da %1$S (%2$S)
 quit-button.tooltiptext.mac = Sciòrti da %1$S (%2$S)
+devtools-webide-button2.label = WebIDE
+devtools-webide-button2.tooltiptext = Arvi WebIDE (%S)
+e10s-button.label = Neuvo barcon no e10s
+e10s-button.tooltiptext = Arvi 'n neuvo barcon no e10s
+pocket-button.label = Pocket
+pocket-button.tooltiptext = Sarva in Pocket
+loop-call-button3.label = Hello
+loop-call-button3.tooltiptext = Inandia 'na conversaçion
+loop-call-button3-pb.tooltiptext = %S o no gh'é into mòddo Navegaçion privâ
+panic-button.label = Ascòrda
+panic-button.tooltiptext = Scancella quarche informaçion da stöia da navegaçion
+social-share-button.label = Condividdi pagina\u00AD
+social-share-button.tooltiptext = Condividdi sta pagina
+web-apps-button.label = App
+web-apps-button.tooltiptext = Descòvri neuve app
+
+
+
+
