--- a/lij/browser/chrome/browser/devtools/canvasdebugger.properties
+++ b/lij/browser/chrome/browser/devtools/canvasdebugger.properties
@@ -15,3 +15,5 @@ snapshotsList.saveDialogJSONFilter = File JSON
 snapshotsList.saveDialogAllFilter = Tutti i file
 snapshotsList.drawCallsLabel = #1 dizegno;#1 dizegni
 snapshotsList.functionCallsLabel = #1 ciama;#1 ciamâ
+recordingTimeoutFailure = Inposcibile atrovâ 'n çiclo requestAnimationFrame ò setTimeout.
+ToolboxCanvasDebugger.panelLabel = Pannello Canvas
