--- a/lij/browser/chrome/browser/devtools/debugger.properties
+++ b/lij/browser/chrome/browser/devtools/debugger.properties
@@ -7,7 +7,7 @@ scopeLabel = Vixibilitæ %S
 loadingText = Carego…
 debuggerMenu.accesskey = D
 debuggerMenu.commandkey = S
-emptyVariablesText = Nesciunn-a variabile da vedde.
+emptyVariablesText = Nisciunn-a variabile da vedde.
 breakpointMenuItem.enableSelf = Ativa ponto de interoçion
 breakpointMenuItem.disableSelf = Dizativa ponto de interoçion
 breakpointMenuItem.deleteSelf = Scancella punto di interruzione
@@ -74,23 +74,26 @@ searchPanelVariable = Filtra variabili (%S)
 variablesSeparatorLabel = :
 watchExpressionsScopeLabel = Esprescioin de contròllo
 watchExpressionsSeparatorLabel = \u0020→
-
+anonymousSourcesLabel = Risorse anònime
 ToolboxDebugger.label = Debugger
-ToolboxDebugger.tooltip = Debugger JavaScript
+ToolboxDebugger.tooltip2 = Debugger JavaScript (%S)
 variablesEditableNameTooltip = Sciacca doggio pe cangiâ
 variablesEditableValueTooltip = Sciacca pe cangiâ o valô
 variablesCloseButtonTooltip = Sciacca pe scancelâ
-
+loadingSourcesText = Aspeto i sorgenti…
 variablesEditButtonTooltip = Sciacca pe inpostâ o valô
-
+ToolboxDebugger.panelLabel = Panello Debugger
 functionSearchSeparatorLabel = ←
 noSourcesText = Sta pagina a no l'à de sorgenti.
 searchPanelFunction = Çerca definiçion de fonçion (%S)
-
+noWorkersText = Sta pagina a no gh'à de worker.
 resumptionOrderPanelTitle = Gh'é un ò ciù debugger in pösa. Arvi torna o debugger misso in pösa ciù de reçente a: %S
-errorLoadingText = Erô into caregamento da sorgente:\n
+errorLoadingText2 = Erô into caregamento de questo URL: %S
 blackBoxCheckboxTooltip = Ativa izoamento (black boxing)
-
+pausePendingButtonTooltip = Aspeto a proscima ezegoçion
+variablesViewMissingArgs = (no gh'é)
+variablesViewOptimizedOut = (scancelou da òtimizaçion)
+variablesViewUninitialized = (no inandiou)
 eventOnSelector = pe
 eventInSource = in
 eventNodes = %S groppi
