--- a/lij/browser/chrome/browser/devtools/app-manager.properties
+++ b/lij/browser/chrome/browser/devtools/app-manager.properties
@@ -10,7 +10,6 @@ project.installing = Instalaçion…
 project.installed = Instala.
 validator.nonExistingFolder = A cartella do progetto a no l'existe
 validator.expectProjectFolder = A cartella do progetto l'é 'n file
-validator.wrongManifestFileName = E app packaged domandan in file manifesto ch'o peu ese ciamou solo 'manifest.webapp', poxiçionou inta cartella prinçipâ (root) do progetto.
 validator.invalidManifestURL = URL manifesto ('%S') no valido
 validator.invalidManifestJSON = O manifesto da webapp (%1$S) o no l'é 'n file JSON valido: %2$S
 validator.noAccessManifestURL = Inposcibile leze o file do manifesto (%1$S): %2$S
@@ -18,10 +17,14 @@ validator.invalidHostedManifestURL = URL '%1$S' do manifesto hosted no valido: %
 validator.invalidProjectType = Tipo de progetto '%S' sconosciuo
 validator.missNameManifestProperty = Seçion òbligatöia 'name' no prezente into manifesto.
 validator.missIconsManifestProperty = Seçion 'icons' no prezente into manifesto.
-validator.missIconMarketplace = La proposta de app in sce Marketplace domanda un'icöna de almeno 128 pixel
+validator.missIconMarketplace2 = La proposta de app in sce Marketplace a domanda un'icöna de 128 pixel
 validator.invalidAppType = Tipo de app sconosciuo: '%S'.
 validator.invalidHostedPriviledges = In'app hosted a no peu ese de tipo '%S'.
 validator.noCertifiedSupport = E app 'certificæ" no en conpletamente soportæ dò-u Gestô de app.
 validator.nonAbsoluteLaunchPath = O percorso de xeuo o dev'ese 'n percorso asoluo ch'o l'iniçia con '/': '%S'
 validator.accessFailedLaunchPath = Inposcibile acede a-o documento iniçiâ de l'app '%S'
 validator.accessFailedLaunchPathBadHttpCode = Inposcibile acede a-o documento iniçiâ de l'app '%1$S', restitoio còdice HTTP %2$S
+index.deprecationNotice = O Gestô app o saiâ scancelou inte proscime verscioin. I progetti sain trasferii into WebIDE.
+index.launchWebIDE = Arvi WebIDE
+index.readMoreAboutWebIDE = Atre informaçioin
+validator.noManifestFile =L'é domandou in file manifesto ch'o peu ese ciamou solo, “manifest.webapp” pe-e app locali (packaged) o “manifest.json” per i conponenti azonti.
