l10:lij new translation part4

--- a/lij/browser/chrome/browser/devtools/netmonitor.properties
+++ b/lij/browser/chrome/browser/devtools/netmonitor.properties
@@ -5,7 +5,7 @@
 netmonitor.label = Ræ
 netmonitor.commandkey = Q
 netmonitor.accesskey = R
-netmonitor.tooltip = Monitor da ræ
+netmonitor.tooltip2 = Monitor da ræ (%S)
 collapseDetailsPane = Ascondi detalli domanda
 expandDetailsPane = Veddi detalli domanda
 headersEmptyText = Nisciunn-a testâ pe sta domanda
@@ -30,4 +30,28 @@ networkMenu.empty = Nisciunn-a domanda
 networkMenu.summary = 'Na domanda, #2 kB, #3 s;#1 domande, #2 kB, #3 s
 networkMenu.sizeKB = %S kB
 networkMenu.totalMS = → %S ms
-networkMenu.divisionMS = %S ms
+networkMenu.millisecond = %S ms
+networkMenu.second = %S s
+networkMenu.minute = %S men
+pieChart.loading = Caregamento…
+pieChart.unavailable = Veuo
+tableChart.loading = Atende…
+tableChart.unavailable = Dæti no disponibili
+charts.sizeKB = %S kB
+charts.totalS = %S s
+charts.cacheEnabled = Cache disponibile
+charts.cacheDisabled = Cache veua
+charts.totalSize = Dimenscioin: %S kB
+networkMenu.sizeUnavailable = —
+networkMenu.sizeCached = Inta cache
+charts.totalSeconds = Tenpo: #1 segondo;Tempo: #1 segondi
+charts.totalCached = Risposte in cache: %S
+charts.totalCount = Totale domande: %S
+netmonitor.security.state.secure = A conescion adeuviâ pe pigiâ sta risorsa a l'ea segua.
+netmonitor.security.state.insecure = A conescion adeuviâ pe pigiâ sta risorsa a no l'ea segua..
+netmonitor.security.state.broken = Un erô de siguessa o l'à inpedio o caregamento da risorsa.
+netmonitor.security.state.weak = Sta risorsa a l'é stæta trasmissa co-ina conescion ch'a l'à 'na cifratua debole.
+netmonitor.security.enabled = Ativou
+netmonitor.security.disabled = Dizativou
+netmonitor.security.hostHeader = Host %S:
+netmonitor.security.notAvailable = <no gh'é>
