--- a/lij/browser/chrome/browser/devtools/scratchpad.properties
+++ b/lij/browser/chrome/browser/devtools/scratchpad.properties
@@ -80,3 +80,15 @@ connectionTimeout = Tenpo pe-a conescion ezaorio. Controlâ a Console di eroî d
 
 scratchpad.label = Blòcco di aponti
 scratchpad.tooltip = Blòcco di aponti (scratchpad)
+
+importFromFile.convert.failed = Converscion do file da %1$S a Unicode no ariescia.
+scratchpad.panelLabel = Panello Blòcco di aponti
+scratchpad.statusBarLineCol = Riga %1$S, col. %2$S
+selfxss.msg = Atenti a-e truffe: no incolâ o còdice do quæ no s'acapisce cöse o veu dî. Sto chi o porieiva consentî a dizonesti de pigiâ o contròllo do computer. Scrivi ”%S” into blòcco di aponti pe ativâ a fonçion incòlla.
+selfxss.okstring = consenti incòlla
+
+
+
+
+
+
