--- a/bs/services/sync/sync.properties
+++ b/bs/services/sync/sync.properties
@@ -10,6 +10,7 @@ lastSync2.label = Zadnja sinhronizacija: %S
 
 # signInToSync.description is the tooltip for the Sync buttons when Sync is
 # not configured.
+signInToSync.description = Prijavi se na Sync
 
 mobile.label = Mobilne zabilješke
 
