[bs] update from Pootle (firefox)

--- a/bs/browser/chrome/browser/accounts.properties
+++ b/bs/browser/chrome/browser/accounts.properties
@@ -28,6 +28,7 @@ resendVerificationEmail.accessKey = š
 reconnectDescription = Ponovo poveži %S
 
 # LOCALIZATION NOTE (verifyDescription) - %S = Email address of user's Firefox Account
+verifyDescription = Verifikuj %S
 
 forgetMigration.label = Zaboravi
 forgetMigration.accessKey = Z
@@ -46,7 +47,9 @@ verificationSentTitle = Verifikacija poslana
 verificationSentHeading = Verifikacijski link je poslan na %S
 verificationSentDescription = Molimo da provjerite vaš email i da klikom na link započnete sa sinhronizacijom.
 # LOCALIZATION NOTE (verificationSentFull) - %S = Email address of user's Firefox Account
+verificationSentFull = Link za verifikaciju je poslan na %S. Molimo da provjerite vaš email i kliknete link za početak sinhronizacije.
 
 verificationNotSentTitle = Ne mogu poslati verifikaciju
 verificationNotSentHeading = Trenutno ne možemo poslati verifikaciju
 verificationNotSentDescription = Molimo pokušajte ponovo kasnije.
+verificationNotSentFull = Trenutno ne možemo poslati link za verifikaciju, molimo pokušajte kasnije.
