--- a/bs/browser/chrome/browser/devtools/app-manager.properties
+++ b/bs/browser/chrome/browser/devtools/app-manager.properties
@@ -18,6 +18,7 @@ project.installing=Instalacija…
 project.installed=Instalirano!
 validator.nonExistingFolder=Projektni direktorij ne postoji
 validator.expectProjectFolder=Projektni direktorij je zapravo fajl
+validator.noManifestFile=Manifest fajl je obavezan u projektnom korjenskom direktoriju, nazvan ili 'manifest.webapp' za zapakovane aplikacije ili 'manifest.json' za add-one.
 validator.invalidManifestURL=Pogrešan URL manifesta %S
 # LOCALIZATION NOTE (validator.invalidManifestJSON, validator.noAccessManifestURL):
 # %1$S is the error message, %2$S is the URI of the manifest.
