--- a/bs/browser/chrome/browser/devtools/markers.properties
+++ b/bs/browser/chrome/browser/devtools/markers.properties
@@ -17,11 +17,14 @@
 marker.label.styles=Rekalkulacija stila
 marker.label.reflow=Raspored
 marker.label.paint=Boja
+marker.label.composite=Kompozitni slojevi
+marker.label.compositeForwardTransaction=Poslan kompozitni zahtjev
 marker.label.javascript=Funkcijski poziv
 marker.label.parseHTML=Parsiraj HTML
 marker.label.parseXML=Parsiraj XML
 marker.label.domevent=DOM događaj
 marker.label.consoleTime=Konzola
+marker.label.garbageCollection2=Skupljanje smeća
 marker.label.garbageCollection.incremental=Inkrementalni GC
 marker.label.garbageCollection.nonIncremental=Ne-inkrementalni GC
 marker.label.cycleCollection=Kolekcija ciklusa
