--- a/bs/browser/chrome/browser/loop/loop.properties
+++ b/bs/browser/chrome/browser/loop/loop.properties
@@ -28,8 +28,14 @@ sign_in_again_use_as_guest_button2=Koristi {{clientSuperShortname}} kao gost
 first_time_experience_button_label=Započnite
 ## LOCALIZATION_NOTE(first_time_experience_subheading): Message inviting the
 ## user to create his or her first conversation.
+first_time_experience_subheading=Pridružite se razgovoru
 
 invite_header_text=Pozovite nekoga da vam se pridruži.
+invite_header_text2=Pozovite prijatelja da vam se pridruži
+invite_facebook_triggered=podijeljeno!
+invite_copy_button=kopiraj link
+invite_copy_triggered=kopirano!
+invite_email_button=pošalji link emailom
 
 # Status text
 display_name_guest=Gost
@@ -89,9 +95,11 @@ contacts_search_placesholder2=Pretraživanje…
 
 ## LOCALIZATION NOTE (new_contact_button2): This is the button to open the
 ## new contact sub-panel.
+new_contact_button2=Dodaj novi kontakt
 ## LOCALIZATION NOTE (contact_form_*_placeholder):
 ## These are the placeholders for the inputs for entering or editing a contact
 ## Click the 'New Contact' button to see the fields.
+contact_form_email_placeholder=Email
 contact_form_fxos_phone_placeholder=Firefox OS telefon
 contact_form_phone_placeholder2=Telefon
 
@@ -100,8 +108,10 @@ contacts_blocked_contacts=Blokirani kontakti
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact. Click the 'New Contact'
 ## button to see the fields.
+add_contact_button=Dodaj kontakt
 ## LOCALIZATION NOTE(add_contact_title): This is the subtitle of the add contact
 ## panel. It is displayed when Add Contact is selected.
+add_contact_title=Dodaj kontakt
 ### LOCALIZATION NOTE (valid_email_text_description): This is displayed when
 ### the user enters an invalid email address, preventing the addition of the
 ### contact.
@@ -129,8 +139,10 @@ sync_contacts_button=Sinhronizuj kontakte
 ## contacts in his address book
 ## LOCALIZATION NOTE(no_contacts_import_or_add2): Subheading inviting the user
 ## to add people to his contact list
+no_contacts_import_or_add2=Dodajte nekoga!
 ## LOCALIZATION NOTE(no_conversations_message_heading2): Title shown when user
 ## has no conversations available.
+no_conversations_message_heading2=Još nema razgovora.
 ## LOCALIZATION NOTE(no_conversations_start_message2): Subheading inviting the
 ## user to start a new conversation.
 ## LOCALIZATION NOTE(contacts_no_search_results): Message shown when contacts
@@ -194,6 +206,7 @@ video_call_menu_button=Video razgovor
 ## replaced with a link with the text content of gravatars_promo_message_learnmore.
 gravatars_promo_message=Dijeljenjem email adrese s Gravatarom možete automatski dodati ikone profila vašim kontaktima. {{learn_more}}.
 gravatars_promo_message_learnmore=Saznajte više
+gravatars_promo_button_nothanks2=Ne, hvala
 
 # Conversation Window Strings
 
@@ -246,6 +259,7 @@ restart_call=Pridruži se ponovno
 contact_unavailable_title={{contactName}} je nedostupan/na.
 generic_contact_unavailable_title=Ova osoba je nedostupna.
 
+generic_failure_message=Imamo tehničkih poteškoća…
 generic_failure_with_reason2=Možete pokušati ponovo ili poslati link emailom da bi vas mogli kontaktirati kasnije.
 generic_failure_no_reason2=Želite li pokušati ponovo?
 
@@ -309,6 +323,7 @@ rooms_room_full_label=U ovom razgovoru je već dvoje ljudi.
 rooms_room_full_call_to_action_nonFx_label=Preuzmite {{brandShortname}} da biste započeli svoj
 rooms_room_full_call_to_action_label=Saznajte više o {{clientShortname}} »
 rooms_room_joined_label=Neko se pridružio razgovoru!
+rooms_room_join_label=Pridružite se razgovoru
 rooms_signout_alert=Otvoreni razgovori će biti zatvoreni
 
 # Infobar strings
@@ -337,6 +352,8 @@ context_edit_name_placeholder=Naziv razgovora
 context_edit_comments_placeholder=Komentari
 context_add_some_label=Dodajte neki kontekst
 context_show_tooltip=Prikaži kontekst
+context_cancel_label=Otkaži
+context_done_label=Gotovo
 context_link_modified=Ovaj link je promijenjen.
 context_learn_more_link_label=Saznajte više.
 conversation_settings_menu_edit_context=Uredi kontekst
