--- a/bs/browser/chrome/browser/browser.properties
+++ b/bs/browser/chrome/browser/browser.properties
@@ -574,6 +574,7 @@ getUserMedia.shareEntireScreen.label = Cijeli ekran
 # LOCALIZATION NOTE (getUserMedia.shareMonitor.label):
 # %S is screen number (digits 1, 2, etc)
 # Example: Screen 1, Screen 2,..
+getUserMedia.shareMonitor.label = Ekran %S
 # LOCALIZATION NOTE (getUserMedia.shareApplicationWindowCount.label):
 # Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -775,3 +776,7 @@ e10s.accessibilityNotice.disableAndRestart.accesskey = r
 e10s.accessibilityNotice.dontDisable.label = Nemoj onemogućiti
 e10s.accessibilityNotice.dontDisable.accesskey = g
 
+muteTab.label = Ugasi zvuk taba
+muteTab.accesskey = g
+unmuteTab.label = Uključi zvuk taba
+unmuteTab.accesskey = k
